--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>Heath Risks facing particular demographics</h1>
+        <h1>Heath Risks facing US demographics</h1>
       </div>
     </div>
     <div class="row">
